--- a/user-guides/index.html
+++ b/user-guides/index.html
@@ -475,43 +475,47 @@ $('#toc').on('click', 'a', function() {
 <hr class="shaded"/>
 
 </div>
+</div>
 
 <!-- <div id="tm-footer" class="uk-block tm-block-footer uk-block-default tm-block-fullwidth" > -->
 <!-- <div class="uk-container uk-container-center uk-height-1-1 uk-width-1-1"> -->
 
-<!-- right -->
-	<footer class="tm-footer">
-    	<div class="uk-panel">
+<footer class="tm-footer">
+	<div class="uk-panel">
+		<!-- footer container -->
 		<div class="uk-grid uk-grid-width-small-1-1 uk-grid-width-medium-1-2 uk-grid-width-large-1-2 uk-text-left uk-grid-small" data-uk-grid-margin="">
-		<div class="rd-footer-left">
-		<div class="rd-footermenu uk-clearfix">		
-			<div class="moduletable">
-				<ul class="nav menu">
-					<li class="item-101 default current active"><a href="/" class="uk-hidden-large">Home</a></li><li class="item-108 deeper parent"><a href="/products/how-it-works" >Products</a><ul class="nav-child unstyled small"><li class="item-111 parent"><a href="/products/how-it-works" >How It Works</a></li><li class="item-112 parent"><a href="/products/beam" >Beam</a></li><li class="item-113 parent"><a href="/products/beam-pro" >BeamPro</a></li><li class="item-120"><a href="/products/test-drive" >Test Drive</a></li><li class="item-114"><a href="/products/stories" >Stories</a></li></ul></li><li class="item-154 deeper parent"><a href="/news/press" >News</a><ul class="nav-child unstyled small"><li class="item-116"><a href="/news/press" >Press</a></li><li class="item-117 parent"><a href="/news/blog" >Blog</a></li><li class="item-118"><a href="/news/buzz" >Buzz</a></li></ul></li><li class="item-109 deeper parent"><a href="/company/about" >Company</a><ul class="nav-child unstyled small"><li class="item-172 parent"><a href="/company/about" >About</a></li><li class="item-156"><a href="/company/careers" >Careers</a></li><li class="item-119"><a href="/company/contact" >Contact</a></li></ul></li><li class="item-110 deeper parent"><a href="/support/welcome" >Support</a><ul class="nav-child unstyled small"><li class="item-471 parent"><a href="/support/welcome" >Welcome</a></li><li class="item-173"><a href="http://docs.suitabletech.com" target="_blank" rel="noopener noreferrer">Documentation</a></li><li class="item-201"><a href="http://www.suitabletech.com/installers/" target="_blank" rel="noopener noreferrer">App Download</a></li><li class="item-123"><a href="https://support.suitabletech.com" target="_blank" rel="noopener noreferrer">Help Center</a></li></ul></li><li class="item-143 deeper parent"><a href="#" class="other-hidden">Other</a><ul class="nav-child unstyled small"><li class="item-144"><a href="https://app.suitabletech.com/accounts/home/" class="other-hidden" target="_blank" rel="noopener noreferrer">Login</a></li><li class="item-145"><a href="/other/terms-of-use" class="other-hidden">Terms of Use</a></li><li class="item-180"><a href="/other/privacy-policy" class="other-hidden">Privacy Policy</a></li></ul></li>
-				</ul>
+		<!-- left -->
+			<div class="rd-footer-left">
+				<div class="rd-footermenu uk-clearfix">		
+					<div class="moduletable">
+						<ul class="nav menu">
+							<li class="item-101 default current active"><a href="/" class="uk-hidden-large">Home</a></li><li class="item-108 deeper parent"><a href="/products/how-it-works" >Products</a><ul class="nav-child unstyled small"><li class="item-111 parent"><a href="/products/how-it-works" >How It Works</a></li><li class="item-112 parent"><a href="/products/beam" >Beam</a></li><li class="item-113 parent"><a href="/products/beam-pro" >BeamPro</a></li><li class="item-120"><a href="/products/test-drive" >Test Drive</a></li><li class="item-114"><a href="/products/stories" >Stories</a></li></ul></li><li class="item-154 deeper parent"><a href="/news/press" >News</a><ul class="nav-child unstyled small"><li class="item-116"><a href="/news/press" >Press</a></li><li class="item-117 parent"><a href="/news/blog" >Blog</a></li><li class="item-118"><a href="/news/buzz" >Buzz</a></li></ul></li><li class="item-109 deeper parent"><a href="/company/about" >Company</a><ul class="nav-child unstyled small"><li class="item-172 parent"><a href="/company/about" >About</a></li><li class="item-156"><a href="/company/careers" >Careers</a></li><li class="item-119"><a href="/company/contact" >Contact</a></li></ul></li><li class="item-110 deeper parent"><a href="/support/welcome" >Support</a><ul class="nav-child unstyled small"><li class="item-471 parent"><a href="/support/welcome" >Welcome</a></li><li class="item-173"><a href="http://docs.suitabletech.com" target="_blank" rel="noopener noreferrer">Documentation</a></li><li class="item-201"><a href="http://www.suitabletech.com/installers/" target="_blank" rel="noopener noreferrer">App Download</a></li><li class="item-123"><a href="https://support.suitabletech.com" target="_blank" rel="noopener noreferrer">Help Center</a></li></ul></li><li class="item-143 deeper parent"><a href="#" class="other-hidden">Other</a><ul class="nav-child unstyled small"><li class="item-144"><a href="https://app.suitabletech.com/accounts/home/" class="other-hidden" target="_blank" rel="noopener noreferrer">Login</a></li><li class="item-145"><a href="/other/terms-of-use" class="other-hidden">Terms of Use</a></li><li class="item-180"><a href="/other/privacy-policy" class="other-hidden">Privacy Policy</a></li></ul></li>
+						</ul>
+					</div>
+				</div>
 			</div>
-		</div>
-		</div>
-		</div>
-		</div>
+		
 	
-<!-- left -->
-	<div class="rd-footer-right uk-clearfix">
-		<div class="rd-800-container">
-			<h4 class="rd-800-beam">1-855-200-BEAM (2326)</h4>
-		</div>
-	<div class="rd-mailing-list uk-button" style="text-align: right;"><a href="/subscribe-to-our-newsletter">Subscribe to our Newsletter</a></div>
-	<div class="rd-social" style="width: 100%;">
-		<ul class="rd-social">
-			<li style="display: inline;"><a href="https://twitter.com/suitabletech" target="_blank" rel="noopener noreferrer"><img src="/img/icons/twitter-icon.png" alt="twitter icon" width="25" height="25" /></a></li>
-			<li style="display: inline;"><a href="https://www.facebook.com/suitabletech" target="_blank" rel="noopener noreferrer"><img src="/img/icons/facebook-icon.png" alt="facebook icon" width="25" height="25" /></a></li>
-			<li style="display: inline;"><a href="https://www.linkedin.com/company-beta/2391846/?pathWildcard=2391846" target="_blank" rel="noopener noreferrer"><img src="/img/icons/linkedin-icon.png" alt="linkedin icon" width="25" height="25" /></a></li>
-			<li style="display: inline;"><a href="https://www.instagram.com/suitabletech/" target="_blank" rel="noopener noreferrer"><img src="/img/icons/instagram-icon.png" alt="instagram icon" width="25" height="25" /></a></li>
-		</ul>
-		<p class="uk-margin-large-bottom uk-margin-small-top rd-copyright">Copyright © 2017 Suitable Technologies, Inc.</p>
-	</div>
-	</div>
-	</div>
+			<!-- right -->
+			<div class="rd-footer-right uk-clearfix">
+				<div class="rd-800-container">
+					<div class="rd-800-beam">1-855-200-BEAM (2326)</div>
+				</div>
+				<div class="rd-mailing-list uk-button" style="text-align: right;"><a href="/subscribe-to-our-newsletter">Subscribe to our Newsletter</a></div>
+					<div class="rd-social" style="width: 100%;">
+						<ul class="rd-social">
+							<li style="display: inline;"><a href="https://twitter.com/suitabletech" target="_blank" rel="noopener noreferrer"><img src="/img/icons/twitter-icon.png" alt="twitter icon" width="25" height="25" /></a></li>
+							<li style="display: inline;"><a href="https://www.facebook.com/suitabletech" target="_blank" rel="noopener noreferrer"><img src="/img/icons/facebook-icon.png" alt="facebook icon" width="25" height="25" /></a></li>
+							<li style="display: inline;"><a href="https://www.linkedin.com/company-beta/2391846/?pathWildcard=2391846" target="_blank" rel="noopener noreferrer"><img src="/img/icons/linkedin-icon.png" alt="linkedin icon" width="25" height="25" /></a></li>
+							<li style="display: inline;"><a href="https://www.instagram.com/suitabletech/" target="_blank" rel="noopener noreferrer"><img src="/img/icons/instagram-icon.png" alt="instagram icon" width="25" height="25" /></a></li>
+						</ul>
+						<p class="uk-margin-large-bottom uk-margin-small-top rd-copyright">Copyright © 2017 Suitable Technologies, Inc.</p>
+						<p>Current page last updated:</span> March 8, 2017<br/> Docs site last generated: Sep 27, 2017<br />
+					</div>
+				</div>
+			</div>
+		</div> <!-- uk grid -->
+	</div> <!-- uk panel -->
 </footer>
 <!-- </div> -->
 
@@ -521,7 +525,7 @@ $('#toc').on('click', 'a', function() {
             <div class="row">
                 <div class="col-lg-12 footer">
                &copy;2017 Suitable Technologies. All rights reserved.<br />
-<p>Page last updated:</span> March 8, 2017<br/> Site last generated: Sep 26, 2017<br />
+<p>Page last updated:</span> March 8, 2017<br/> Site last generated: Sep 27, 2017<br />
 <p><img src="/img/SuitableLogo.png" alt="Suitable Technologies Logo" width="150" /></p>
                 </div>
             </div>
